Exclude vscode config from export
Signed-off-by: Joseph Fusco <jfusco@masonite.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ package*.json     export-ignore
 *.config.js       export-ignore
 .git*             export-ignore
 src/              export-ignore
+.vscode/          export-ignore
