--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ branches:
 cache:
   directories:
     - $HOME/.composer/cache
+    - node_modules
 
 matrix:
   include:
@@ -39,6 +40,7 @@ before_script:
       composer global require wp-coding-standards/wpcs
       phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
     fi
+  - npm install
 
 jobs:
   include:
