--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ branches:
 cache:
   directories:
     - $HOME/.composer/cache
-    - $HOME/.npm
+    - node_modules
 
 matrix:
   include:
@@ -40,7 +40,7 @@ before_script:
       composer global require wp-coding-standards/wpcs
       phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
     fi
-  - npm ci
+  - npm install
 
 jobs:
   include:
