--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ jobs:
           fi
     - script: npm run build
     - stage: GitHub Release
-      script: echo "Deploying to GitHub releases ..."
+      script: echo "Deploying to GitHub releases"
       deploy:
         provider: releases
         api_key: $GITHUB_OAUTH_TOKEN
