--- a/.travis.yml
+++ b/.travis.yml
@@ -54,9 +54,10 @@ jobs:
           if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
             phpcs
           fi
-    - script: npm run build
+    - stage: Build
+      script: ls && npm run build && ls
     - stage: GitHub Release
-      script: echo "Deploying to GitHub releases"
+      script: ls"
       deploy:
         provider: releases
         api_key: $GITHUB_OAUTH_TOKEN
