--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,6 @@ notifications:
     on_success: never
     on_failure: change
 
-branches:
-  only:
-    - master
-
 cache:
   directories:
     - $HOME/.composer/cache
@@ -50,6 +46,10 @@ before_script:
   - npm install
 
 before_deploy:
+  - git config --local user.name "$GIT_USER_NAME"
+  - git config --local user.email "$GIT_USER_EMAIL"
+  - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+  - git tag $TRAVIS_TAG
   - cd ..
   - ls -a
   - tar -zcf ${TRAVIS_BUILD_DIR}${REPO}.tar.gz ${REPO}
