--- a/package.json
+++ b/package.json
@@ -1,53 +1,59 @@
 {
-	"scripts": {
-		"test": "npm run --silent lint",
-		"lint": "npm run lint:styles && npm run lint:scripts && npm run lint:php",
-		"lint:scripts": "npx eslint ./src/scripts/**/*.js",
-		"lint:styles": "npx stylelint ./src/styles/**/*.scss --syntax scss",
-		"lint:php": "./vendor/bin/phpcs",
-		"start": "npm run --silent watch",
-		"watch": "webpack -w",
-		"build": "webpack --env prod",
-		"i18n": "npm run i18n:textdomain && npm run i18n:pot",
-		"i18n:textdomain": "npx wpi18n addtextdomain --exclude=vendor,node_modules",
-		"i18n:pot": "npx wpi18n makepot"
-	},
-	"devDependencies": {
-		"@masonite/eslint-config-base": "0.0.11",
-		"@masonite/stylelint-config": "^1.4.0",
-		"autoprefixer": "^8.6.2",
-		"babel-core": "^6.26.3",
-		"babel-loader": "^7.1.4",
-		"babel-plugin-syntax-dynamic-import": "^6.18.0",
-		"babel-preset-env": "^1.7.0",
-		"copy-webpack-plugin": "^4.5.4",
-		"css-loader": "^0.28.11",
-		"eslint": "^5.16.0",
-		"eslint-config-wordpress": "^2.0.0",
-		"eslint-plugin-import": "^2.16.0",
-		"extract-text-webpack-plugin": "^3.0.2",
-		"file-loader": "^1.1.11",
-		"friendly-errors-webpack-plugin": "^1.7.0",
-		"husky": "^1.1.4",
-		"mini-css-extract-plugin": "^0.4.0",
-		"node-sass": "^4.9.0",
-		"node-wp-i18n": "^1.2.1",
-		"postcss-loader": "^2.1.5",
-		"postcss-preset-env": "^5.3.0",
-		"sass-loader": "^7.0.3",
-		"style-loader": "^0.21.0",
-		"stylelint": "^9.10.1",
-		"stylelint-config-wordpress": "^13.1.0",
-		"stylelint-scss": "^3.5.4",
-		"stylelint-webpack-plugin": "^0.10.5",
-		"webpack": "^4.12.0",
-		"webpack-cli": "^3.0.4",
-		"webpack-livereload-plugin": "^2.1.1"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "npm test",
-			"pre-push": "npm test"
-		}
-	}
+  "private": true,
+  "scripts": {
+    "preinstall": "composer install",
+    "start": "npm run --silent watch",
+    "watch": "webpack -w",
+    "test": "npm run --silent lint",
+    "lint": "npm run lint:styles && npm run lint:scripts && npm run lint:php",
+    "lint:scripts": "npx eslint ./src/scripts/**/*.js",
+    "lint:styles": "npx stylelint ./src/styles/**/*.scss --syntax scss",
+    "lint:php": "./vendor/bin/phpcs",
+    "i18n": "npm run i18n:textdomain && npm run i18n:pot",
+    "i18n:textdomain": "npx wpi18n addtextdomain --exclude=vendor,node_modules",
+    "i18n:pot": "npx wpi18n makepot"
+  },
+  "devDependencies": {
+    "@masonite/eslint-config-base": "0.0.11",
+    "@masonite/stylelint-config": "^1.4.0",
+    "autoprefixer": "^9.6.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.7.0",
+    "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^3.0.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.17.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^4.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "husky": "^2.4.1",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "node-wp-i18n": "^1.2.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.6.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "stylelint": "^10.1.0",
+    "stylelint-config-wordpress": "^14.0.0",
+    "stylelint-scss": "^3.8.0",
+    "stylelint-webpack-plugin": "^0.10.5",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-livereload-plugin": "^2.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "pre-push": "npm test"
+    }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie < 11",
+    "not op_mini all"
+  ]
 }
