--- a/.vscode/settings.recommended.json
+++ b/.vscode/settings.recommended.json
@@ -15,24 +15,23 @@
     "**/.git*": true,
     "**/.DS_Store": true,
     "**/.idea": true,
-    "**/.npmrc": true,
-    "**/.vscode": true,
-    "**/.editorconfig": true,
-    "**/LICENSE": true,
-    "**/phpcs.xml": true,
-    "**/.stylelintignore": true,
-    "**/.stylelintrc.js": true,
-    "**/.browserslistrc": true,
-    "**/.eslintignore": true,
-    "**/.eslintrc.js": true,
-    "**/postcss.config.js": true,
-    "**/webpack.config.js": true,
-    "**/composer.lock": true,
-    "**/package-lock.json": true,
-    "**/vendor/": true,
-    "**/node_modules/": true,
-    "**/dist/": true,
-    "**/bin/": true,
+    ".npmrc": true,
+    ".vscode": true,
+    ".editorconfig": true,
+    "LICENSE": true,
+    "phpcs.xml": true,
+    ".stylelintignore": true,
+    ".stylelintrc.js": true,
+    ".eslintignore": true,
+    ".eslintrc.js": true,
+    "postcss.config.js": true,
+    "webpack.config.js": true,
+    "composer.lock": true,
+    "package-lock.json": true,
+    "vendor/": true,
+    "node_modules/": true,
+    "dist/": true,
+    "bin/": true,
     "languages/": true
   }
 }
