Add description to composer file

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "masonitedoors/widen-media",
-  "description": "",
+  "description": "Search and add Widen digital assets to your WordPress media library.",
   "type": "wordpress-plugin",
   "license": "GPL-2.0-or-later",
   "minimum-stability": "dev",
