Hide GitHub PR diffs for specific files

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,10 @@ composer*         export-ignore
 package*.json     export-ignore
 *.xml             export-ignore
 *.config.js       export-ignore
+
+# Files to hide by default for GitHub pull request diffs.
+
+languages/        linguist-generated
+*.min.js          linguist-generated
+*.min.css         linguist-generated
+*.snap            linguist-generated
