--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,4 @@ package*.json     export-ignore
 # Files to hide by default for GitHub pull request diffs.
 
 languages/        linguist-generated
-*.min.js          linguist-generated
-*.min.css         linguist-generated
-*.snap            linguist-generated
+dist/             linguist-generated
